# oca-installation-helper

./: .flake8  .gitignore  .gitlab-ci.yml  oca-installation-helper  opsi-dev-tool.yml  opsi.icns  pyproject.toml
ocainstallationhelper/: __init__.py  __main__.py  backend.py  config.py  console.py  gui.py  jsonrpc.py
tests/: test_config.py  test_init.py  test_main.py  utils.py
tests/test_data/: install.conf
