[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "oca-installation-helper"
version = "4.3.0.2"
description = "opsi-client-agent installation helper"
homepage = "https://www.opsi.org"
license = "AGPL-3.0"
authors = [ "uib GmbH <info@uib.de>",]
maintainers = [ "uib GmbH <info@uib.de>",]
[[tool.poetry.packages]]
include = "ocainstallationhelper"

[[tool.poetry.source]]
name = "uib"
url = "http://pypi.uib.gmbh:8080/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
pytest = "^7.0"
pyinstaller = "^6.0"
pytest-cov = "^4.0.0"
mypy = "^1.5.1"
types-psutil = "^5.8.20"

[tool.black]
line-length = 140
target-version = [ "py311",]
use-tabs = true

[tool.ruff]
line-length = 140

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
zeroconf = "^0.131.0"
pysimplegui = "^4.39.1"
psutil = "^5.8.0"
picotui = "^1.2"
netifaces = "^0.11.0"
msgpack = "^1.0.3"
python-opsi-common = "^4.3.0"

[tool.poetry.scripts]
oca-installation-helper = "ocainstallationhelper.__main__:main"

[tool.ruff.format]
indent-style = "tab"
