[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "oca-installation-helper"
version = "4.3.0.3"
description = "opsi-client-agent installation helper"
homepage = "https://www.opsi.org"
license = "AGPL-3.0"
authors = [ "uib GmbH <info@uib.de>",]
maintainers = [ "uib GmbH <info@uib.de>",]
[[tool.poetry.packages]]
include = "ocainstallationhelper"

[[tool.poetry.source]]
name = "uibpypi"
url = "https://pypi.uib.gmbh/simple"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

[tool.ruff]
line-length = 140

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disable_error_code = [ "import-untyped",]
follow_imports = "silent"
incremental = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
zeroconf = "^0.131"
pysimplegui = "^4.39"
psutil = "^5.8"
picotui = "^1.2"
netifaces = "^0.11"
msgpack = "^1.0"
python-opsi-common = "^4.3"

[tool.poetry.scripts]
oca-installation-helper = "ocainstallationhelper.__main__:main"

[tool.ruff.format]
indent-style = "tab"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3"
pytest = "^8.1"
pyinstaller = "^6.0"
pytest-cov = "^4.0.0"
mypy = "^1.5.1"
types-psutil = "^5.8.20"
